--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -20,4 +20,11 @@
 
 </div>
 
+<section>
+    <form action="/" method="post" enctype="multipart/form-data">
+        <input type="file" name="myFile">
+        <button>enviar</button>
+    </form>
+</section>
+
 <script src="/static/assets/js/index.js"></script>
