--- a/src/public/assets/css/index.css
+++ b/src/public/assets/css/index.css
@@ -1,9 +1,146 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+}
+
+body {
+    font-family: 'Open Sans', sans-serif;
+    color: rgb(19, 19, 19);
+    margin: 0 2rem;
+
+}
+
+img {
+    max-width: 100%;
+}
+
+ul li {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+label {
+    margin-bottom: 3px;
+    letter-spacing: 0.5px;
+
+}
+
+input {
+    margin-bottom: 1rem;
+    height: 1.8rem;
+}
+
 h1 {
-    color: #393994;
+
     text-align: center;
     text-transform: uppercase;
+    font-size: 2rem;
+    margin: 3rem;
 }
 
 h3 {
     color: tomato;
+}
+
+.flex-column {
+    display: flex;
+    flex-direction: column;
+}
+
+
+/* lista productos */
+.lista-container {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+}
+
+.lista-detalles {
+    display: contents;
+    /* Permite que los elementos hijos (li) se alineen en el grid del contenedor */
+    background-color: rgb(19, 19, 19);
+    color: white;
+    text-align: center;
+}
+
+.lista-detalles li {
+    padding: 1rem;
+    letter-spacing: 0.5px;
+    background-color: rgb(30, 30, 30);
+    border: 1px solid #323232;
+}
+
+.lista-productos {
+    display: contents;
+
+}
+
+.lista-productos li {
+    padding: 0.5rem;
+    background-color: rgb(245, 245, 245);
+    border-bottom: 1px solid #ddd;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.lista-productos img {
+    max-width: 100px;
+    /* Tamaño máximo de ancho reducido */
+    max-height: 100px;
+    /* Tamaño máximo de alto reducido */
+    width: auto;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    /* Centra la imagen horizontalmente */
+    border: 2px solid #ccc;
+    /* Agrega un borde */
+
+}
+
+li img {
+    width: 50%;
+}
+
+
+
+/* formulario */
+
+.h2-form {
+    font-size: 1rem;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+}
+
+#form {
+    background-color: rgb(245, 245, 245);
+
+    padding: 2rem;
+    margin-bottom: 4rem;
+    width: 50%;
+    border-radius: 5px;
+    border: 2px solid rgb(71, 71, 71);
+}
+
+.form-container {
+    display: flex;
+    justify-content: center;
+}
+
+.buttonEnviar {
+    padding: 0.5rem;
+    text-transform: uppercase;
+    font-size: 1rem;
+    letter-spacing: 1px;
+    margin-top: 1rem;
+    background-color: rgb(245, 245, 245);
+    border-radius: 5px;
+    border: 2px solid rgb(71, 71, 71);
+
 }
