--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -20,7 +20,7 @@
         {{#each mostrarLista}}
 
         <ul class="lista-productos">
-            <li>{{this.file}}</li>
+            <li><img src="{{file}}" alt="{{this.title}}"></li>
             <li>{{this.title}}</li>
             <li>{{this.category}}</li>
             <li>{{this.description}}</li>
