--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -4,17 +4,28 @@
     {{#if isAdmin}}
 
     <div class="home-container">
-        {{#each mostrarLista}}
+        {{#each products}}
         <ul>
             <li>
                 <h4>{{this.title}}</h4>
             </li>
-            <li><img src="{{file}}" alt="{{this.title}}"></li>
+            <li><img src="{{this.thumbnail}}" alt="{{this.title}}"></li>
             <li>{{this.description}}</li>
             <li><strong>${{this.price}}</strong></li>
         </ul>
         {{/each}}
     </div>
+
+
+    {{#if hasPrevPage}}
+    <a href="/?page={{prevPage}}">Anterior</a>
+    {{/if}}
+
+    {{#if hasNextPage}}
+    <a href="/?page={{nextPage}}">Siguiente</a>
+    {{/if}}
+
+    <p>Página {{currentPage}} de {{totalPages}}</p>
 
     {{else}}
     <h2>No tienes acceso para ver los productos</h2>
