--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -28,7 +28,7 @@
             </div>
             <div class="flex-column">
                 <label for="code">Code </label>
-                <input type="text" name="stock" id="code" required>
+                <input type="text" name="code" id="code" required>
             </div>
 
             <div class="flex-column">
@@ -50,7 +50,6 @@
             <li>Precio</li>
             <li>Stock</li>
             <li>Código</li>
-            <li>Id</li>
         </ul>
     </div>
 
