--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -9,7 +9,7 @@
             <li>
                 <h4>{{this.title}}</h4>
             </li>
-            <li><img src="{{this.thumbnail}}" alt="{{this.title}}"></li>
+            <li><img src="{{this.file}}" alt="{{this.title}}"></li>
             <li>{{this.description}}</li>
             <li><strong>${{this.price}}</strong></li>
         </ul>
