--- a/src/public/assets/css/index.css
+++ b/src/public/assets/css/index.css
@@ -6,9 +6,11 @@
 }
 
 body {
+    display: block;
     font-family: 'Open Sans', sans-serif;
     color: rgb(19, 19, 19);
     margin: 0 2rem;
+
 
 }
 
