--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
+    <link rel="preload" href="static/assets/css/{{style}}" as="style">
     <link rel="stylesheet" href="static/assets/css/{{style}}">
+
 </head>
 
 <body>
