--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,7 +1,11 @@
 <main>
     <h1>Home</h1>
 
-    {{#if isAdmin}}
+    <div></div>
+    <input type="text" id="chatbox">
+    </div>
+
+    {{#if isUser}}
 
     <div class="home-container">
         {{#each products}}
@@ -38,5 +42,6 @@
 </main>
 
 
+<script src=" https://cdn.jsdelivr.net/npm/sweetalert2@11.7.1/dist/sweetalert2.all.min.js "></script>
 
-<script src="/static/assets/js/index.js"></script>
+<script src="/static/assets/js/home.js"></script>
