--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,9 +1,6 @@
 <main>
     <h1>Home</h1>
 
-    <div></div>
-    <input type="text" id="chatbox">
-    </div>
 
     {{#if isUser}}
 
@@ -16,7 +13,10 @@
             <li><img src="{{this.file}}" alt="{{this.title}}"></li>
             <li>{{this.description}}</li>
             <li><strong>${{this.price}}</strong></li>
+
+            <button type="button" id="addToCart" data-product-id="{{this._id}}">Agregar al Carrito</button>
         </ul>
+
         {{/each}}
     </div>
 
