--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -14,7 +14,7 @@
             <li>{{this.description}}</li>
             <li><strong>${{this.price}}</strong></li>
 
-            <button type="button" id="addToCart" data-product-id="{{this._id}}">Agregar al Carrito</button>
+            <button type="button" class="addToCart" data-product-id="{{this._id}}">Agregar al Carrito</button>
         </ul>
 
         {{/each}}
