--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -7,10 +7,18 @@
     <title>{{title}}</title>
     <link rel="preload" href="static/assets/css/{{style}}" as="style">
     <link rel="stylesheet" href="static/assets/css/{{style}}">
-
 </head>
 
 <body>
+
+    <nav class="container-nav">
+        <ul>
+            <li><a href="/">Productos</a></li>
+            <li><a href="#" id="verCarrito">Carrito</a></li>
+            <li><a href="/contacto">Contacto</a></li>
+        </ul>
+    </nav>
+
     {{{body}}}
 </body>
 
