--- a/src/public/assets/css/index.css
+++ b/src/public/assets/css/index.css
@@ -7,7 +7,7 @@
 
 body {
     display: block;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: rgb(19, 19, 19);
     margin: 0 2rem;
 
@@ -47,9 +47,18 @@ h3 {
     color: tomato;
 }
 
+
 .flex-column {
     display: flex;
     flex-direction: column;
+}
+
+
+/* nav */
+.container-nav ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
 /* home */
@@ -80,6 +89,25 @@ h3 {
     font-size: 5rem;
     width: 5rem;
     background-color: black;
+}
+
+.addToCart {
+    padding: 7px 10px;
+    border-radius: 5px;
+    letter-spacing: 1px;
+    background-color: white;
+    border: 2px solid #ddd;
+    background-color: #1d1d1d;
+    color: white;
+    border-color: white;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+
+.addToCart:hover {
+    background-color: black;
+
+    font-weight: 400;
 }
 
 
