--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -10,11 +10,10 @@
             <li>
                 <h4>{{this.title}}</h4>
             </li>
-            <li><img src="{{this.file}}" alt="{{this.title}}"></li>
-            <li>{{this.description}}</li>
+            <img src="{{this.file}}" alt="{{this.title}}">
             <li><strong>${{this.price}}</strong></li>
 
-            <button type="button" class="addToCart" data-product-id="{{this._id}}">Agregar al Carrito</button>
+            <button type="button" class="addToCart" data-product-id="{{this._id}}">Agregar Al Carrito</button>
         </ul>
 
         {{/each}}
