--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -71,3 +71,4 @@
 <!--<script src="/path/to/realtime.js"></script> 
 <!-- para saber si está bien importada la libreria: socket.io/socket.io.js !-->
 <script src="/static/assets/js/realtime.js"></script>
+<script src="/static/assets/js/home.js"></script>
