--- a/src/public/assets/css/index.css
+++ b/src/public/assets/css/index.css
@@ -15,6 +15,7 @@ body {
 }
 
 img {
+    height: auto;
     max-width: 100%;
 }
 
@@ -89,6 +90,7 @@ h3 {
     font-size: 5rem;
     width: 5rem;
     background-color: black;
+    cursor: pointer;
 }
 
 .addToCart {
@@ -118,7 +120,6 @@ h3 {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     border: 1px solid #ddd;
-
 }
 
 .lista-detalles {
@@ -127,7 +128,6 @@ h3 {
     background-color: rgb(19, 19, 19);
     color: white;
     text-align: center;
-
 
 }
 
@@ -209,4 +209,27 @@ li img {
 /* pagination */
 .container-pages {
     text-align: center;
+}
+
+
+
+/* cart */
+.cart-container {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    border-bottom: 1px solid #ddd;
+}
+
+.cart-detalles {
+    display: contents;
+    grid-template-columns: repeat(5, 1fr);
+    text-align: center;
+
+}
+
+.cart-detalles li {
+    display: grid;
+    align-items: center;
+    align-self: center;
+
 }
