deleted product to realtime

--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -50,10 +50,15 @@
             <li>Precio</li>
             <li>Stock</li>
             <li>Código</li>
+            <li>Acciones</li>
+
         </ul>
     </div>
 
-    <div id="listaProducts"></div>
+    <div id="listaProducts">
+
+    </div>
+
     <br>
 
 
