--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -14,12 +14,15 @@
     <nav class="container-nav">
         <ul>
             <li><a href="/">Productos</a></li>
-            <li><a href="#" id="verCarrito">Carrito</a></li>
+            <li><a href="/carts/{{cartId}}" id="verCarrito">Carrito</a></li>
             <li><a href="/contacto">Contacto</a></li>
         </ul>
     </nav>
 
     {{{body}}}
+
+
 </body>
+
 
 </html>
