--- a/src/public/assets/css/index.css
+++ b/src/public/assets/css/index.css
@@ -254,10 +254,17 @@ li img {
     border-bottom: 1px solid #ddd;
 }
 
+.products-cart {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    border: 1px solid #ddd;
+}
+
 .cart-detalles {
     display: contents;
     grid-template-columns: repeat(5, 1fr);
     text-align: center;
+    border: 1px solid #777575;
 
 }
 
@@ -265,5 +272,6 @@ li img {
     display: grid;
     align-items: center;
     align-self: center;
+
 
 }
